# veritas-engine

./: pyproject.toml
scripts/: setup.sh  start.sh
tests/: test_all.py
veritas_engine/: __main__.py
veritas_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
veritas_engine/agent/: autonomous.py
veritas_engine/api/: __init__.py  agent_routes.py  server.py
veritas_engine/core/: config.py  constants.py  engine.py  exceptions.py  logger.py  models.py
veritas_engine/daemon/: __init__.py  bootstrap.py
veritas_engine/hyperion/: __init__.py  bootstrap.py
veritas_engine/llm/: __init__.py  kimi_client.py  ollama_client.py
veritas_engine/models/: __init__.py  builtin.py
veritas_engine/noosphere/: __init__.py  bootstrap.py  graph_db.py  memory_compressor.py  vector_db.py  working_memory.py
veritas_engine/oracle/: __init__.py  bootstrap.py
veritas_engine/prometheus/: __init__.py  bootstrap.py
veritas_engine/sensorium/: __init__.py  anomaly_detector.py  base.py  bootstrap.py  event_bus.py  normalizer.py
