[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veritas-engine"
version = "0.1.0-alpha"
description = "Veritas Engine - Autonomous Evolutionary Intelligence Agent Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Veritas Team"}
]
keywords = ["ai", "agent", "autonomous", "knowledge-graph", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "statsmodels>=0.14",
    "rich>=13.0",
    "typer>=0.12",
    "fire>=0.6",
]

[project.optional-dependencies]
all = [
    "kuzu>=0.4",
    "lancedb>=0.5",
    "pyarrow>=15.0",
    "nats-py>=2.6",
    "opcua-client>=0.8",
    "watchdog>=3.0",
    "sqlalchemy>=2.0",
    "mcp>=1.0",
    "torch>=2.0",
    "gplearn>=0.4",
    "asyncio-mqtt>=0.16",
    "aiohttp>=3.9",
    "aiosqlite>=0.19",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
veritas = "veritas_engine.__main__:main"

[project.urls]
Homepage = "https://github.com/veritas-engine/veritas"
Documentation = "https://docs.veritas-engine.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["veritas_engine*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
